--- a/demo/index.html
+++ b/demo/index.html
@@ -12,7 +12,7 @@
 	
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.5/angular.min.js"></script>
     <script type="text/javascript" src="app.js"></script>
-    <script type="text/javascript" src="../dist/kjvelarde-multiselect-searchtree-0.8.0.min.js"></script>
+    <script type="text/javascript" src="../dist/kjvelarde-multiselect-searchtree-0.8.0.js"></script>
     <script type="text/javascript" src="../dist/kjvelarde-multiselect-searchtree-0.8.0.tpl.js"></script>
 </head>
 <body ng-controller="KJVelardeDemoCtrl">
@@ -34,7 +34,7 @@
                     </div>
 					                    <multiselect-searchtree data-input-model="data" multi-select="true"
                                             data-output-model="selectedItem2" data-callback="CustomCallback(item, selectedItems)"
-                                            data-select-only-leafs="true"></multiselect-searchtree>
+                                            data-select-only-leafs="false"></multiselect-searchtree>
                 </div>                
             </div>
 			
