--- a/demo/index.html
+++ b/demo/index.html
@@ -5,15 +5,15 @@
     <title>KJVelarde Multi-select Search Tree List</title>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"/>
-    <link rel="stylesheet" href="../dist/kjvelarde-multiselect-searchtree-0.8.0.min.css">
+    <link rel="stylesheet" href="../dist/kjvelarde-multiselect-searchtree-0.8.5.min.css">
 
 	<script   src="https://code.jquery.com/jquery-2.2.3.min.js"   integrity="sha256-a23g1Nt4dtEYOj7bR+vTu7+T8VP13humZFBJNIYoEJo="   crossorigin="anonymous"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 	
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.5/angular.min.js"></script>
     <script type="text/javascript" src="app.js"></script>
-    <script type="text/javascript" src="../dist/kjvelarde-multiselect-searchtree-0.8.0.js"></script>
-    <script type="text/javascript" src="../dist/kjvelarde-multiselect-searchtree-0.8.0.tpl.js"></script>
+    <script type="text/javascript" src="../dist/kjvelarde-multiselect-searchtree-0.8.5.min.js"></script>
+    <script type="text/javascript" src="../dist/kjvelarde-multiselect-searchtree-0.8.5.tpl.js"></script>
 </head>
 <body ng-controller="KJVelardeDemoCtrl">
 
