--- a/demo/index.html
+++ b/demo/index.html
@@ -5,15 +5,15 @@
     <title>KJVelarde Multi-select Search Tree List</title>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"/>
-    <link rel="stylesheet" href="../dist/kjvelarde-multiselect-searchtree-0.8.5.min.css">
+    <link rel="stylesheet" href="../dist/kjvelarde-multiselect-searchtree-0.9.0.min.css">
 
 	<script   src="https://code.jquery.com/jquery-2.2.3.min.js"   integrity="sha256-a23g1Nt4dtEYOj7bR+vTu7+T8VP13humZFBJNIYoEJo="   crossorigin="anonymous"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 	
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.5/angular.min.js"></script>
     <script type="text/javascript" src="app.js"></script>
-    <script type="text/javascript" src="../dist/kjvelarde-multiselect-searchtree-0.8.5.min.js"></script>
-    <script type="text/javascript" src="../dist/kjvelarde-multiselect-searchtree-0.8.5.tpl.js"></script>
+    <script type="text/javascript" src="../dist/kjvelarde-multiselect-searchtree-0.9.0.min.js"></script>
+    <script type="text/javascript" src="../dist/kjvelarde-multiselect-searchtree-0.9.0.tpl.js"></script>
 </head>
 <body ng-controller="KJVelardeDemoCtrl">
 
@@ -23,18 +23,21 @@
 
 <div>
     <div class="container">
-
+	<div class="label label-warning">
+						Please don't be surprise! - The three examples share the same data binding. IT DOESN'T HAVE TO BE.
+						Use a different model/list for each
+			</div>
         <div class="row">
             <h2></h2>
 
              <div class="col-lg-4">
                 <div class="panel panel-primary">
                     <div class="panel-heading">
-                        <i class="glyphicon glyphicon-th-list"></i> Account Manager <a href="#" data-toggle="modal" data-target="#AccountManagerTreeModal"><i class="pull-right glyphicon glyphicon-plus" style="color:white;"></i></a>
+                        <i class="glyphicon glyphicon-th-list"></i> Account Manager - [extra-buttons = true] <a href="#" data-toggle="modal" data-target="#AccountManagerTreeModal"><i class="pull-right glyphicon glyphicon-plus" style="color:white;"></i></a>
                     </div>
 					                    <multiselect-searchtree data-input-model="data" multi-select="true"
                                             data-output-model="selectedItem2" data-callback="CustomCallback(item, selectedItems)"
-                                            data-select-only-leafs="false"></multiselect-searchtree>
+                                            data-select-only-leafs="false" extra-buttons="true"></multiselect-searchtree>
                 </div>                
             </div>
 			
@@ -98,6 +101,8 @@
 			<div class="label label-primary">
 						{{selectedItem2}}
 			</div>
+			
+				
 
 			</div>
 
