Added Affliates section

--- a/demo/index.html
+++ b/demo/index.html
@@ -92,6 +92,8 @@
 					<ul class="list-group">
 				<li class="list-group-item">		<a href="http://portfoliokjvelarde.azurewebsites.net/">http://portfoliokjvelarde.azurewebsites.net/</a></li>
 				<li class="list-group-item">		<a href="www.kjvelarde.com">www.kjvelarde.com</a></li>			
+					<li class="list-group-item">		<a href="affliates.html">Affliates</a></li>			
+
 				</ul>
 				</div>
 			</div>
@@ -103,7 +105,7 @@
 			</div>
 			
 				
-
+<img src='https://www.browserstack.com/automate/badge.svg?badge_key=<badge_key>'/>
 			</div>
 
 					
